<resources>
    <string name="app_name">Together</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Screen Strings -->
    <string name="greeting">WELCOME TO TOGETHER</string>
    <string name="small_greeting">Welcome to the community that connects hobbies TOGETHER!</string>
    <string name="login_require">Please verify your phone number!</string>
    <string name="login_email">Sign in by Email</string>
    <string name="btn_login">VERIFY</string>
    <string name="btn_signup">Sign Up</string>
    <string name="verify_message">A verify code will be sent to your phone</string>
    <string name="login_font_family">Arial</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Register Screen Strings -->
    <string name="action_favorite">Cancel</string>
    <string name="hint_register">Phone Number</string>
    <string name="btn_register">Sign Up</string>
    <string name="hint_email">Email Address</string>
    <string name="register_name">Your Name</string>
    <string name="signup_message">Verification code will be sent to your phone and email.</string>
    <string name="title_activity_email_login">EmailLoginActivity</string>

    <string name="hint_reg_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="email_signup">Sign Up by Email</string>
    <string name="email_login">LOGIN BY EMAIL</string>

    <!-- Main Tabs Strings -->
    <string name="activity_fragment">Home</string>
    <string name="about_me_fragment">About Me</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- Quick Add String -->
    <string name="quick_add_title">Event Title: </string>
    <string name="quick_add_time">Time: </string>
    <string name="title_name">Enter Tittle</string>
    <string name="quick_add_created">Event Created</string>

    <!-- Google Map Strings -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDPsdI3GnuLOdXmu5IzBjd-XsYIYb2vDjc
    </string>


</resources>
