<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reinvo.studytogether.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:id="@+id/register_form">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:fontFamily="@string/login_font_family"
                android:id="@+id/register_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/register_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/input_register_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:fontFamily="@string/login_font_family"
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/input_register_hint" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Spinner is the List of Phone Code in the world-->
            <!-- <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_marginTop="6dp"/> -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:fontFamily="@string/login_font_family"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_reg_password"
                    android:padding="10dp"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/input_register_hint"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <!-- Login Button -->

        <Button
            android:fontFamily="@string/login_font_family"
            android:id="@+id/btn_register"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/btn_register"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/link_button"
            android:theme="@style/Base.Theme.AppCompat.Dialog.Alert" />


        <TextView
            android:textSize="11dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_message"/>
    </LinearLayout>
</RelativeLayout>
